--- a/index.html
+++ b/index.html
@@ -191,6 +191,56 @@
                 </div>
             </div>
         </section>
+        <!-- Skills End -->
+        
+        <!-- Experience Start -->
+        <section class="exp">
+            <div class="container">
+                <div class="exp__col">
+                    <h2 class="exp__title">My <span class="exp__span">Experience</span></h2>
+
+                    <ul class="exp__list">
+                        <li class="exp__list-item">
+                            <div class="exp__row">
+                                <div class="exp__roww">
+                                <img width="32" height="32" class="exp__item-img" src="/assets/icons/google.svg" alt="google logo">
+                                <h3 class="exp__item-title">Lead Software Engineer at Google</h3>
+                            </div>
+                                <span class="exp__item-date">Nov 2019 - Present</span>
+                            </div>
+                            <p class="exp__item-desc">
+                                As a Senior Software Engineer at Google, I played a pivotal role in developing innovative solutions for Google's core search algorithms. Collaborating with a dynamic team of engineers, I contributed to the enhancement of search accuracy and efficiency, optimizing user experiences for millions of users worldwide.
+                            </p>
+                        </li>
+                        <li class="exp__list-item">
+                            <div class="exp__row">
+                                <div class="exp__roww">
+                                    <img width="32" height="32" class="exp__item-img" src="/assets/icons/youtube.svg" alt="youtube log">
+                                <h3 class="exp__item-title">Software Engineer at Youtube</h3>
+                                </div>
+                                <span class="exp__item-date">Jan 2017 - Oct 2019</span>
+                            </div>
+                            <p class="exp__item-desc">
+                                At Youtube, I served as a  Software Engineer, focusing on the design and implementation of backend systems for the social media giant's dynamic platform. Working on projects that involved large-scale data processing and user engagement features, I leveraged my expertise to ensure seamless functionality and scalability.
+                            </p>
+                        </li>
+                        <li class="exp__list-item">
+                            <div class="exp__row">
+                                <div class="exp__roww">
+                                <img width="32" height="32" class="exp__item-img" src="/assets/icons/apple.svg" alt="apple log">
+                                <h3 class="exp__item-title">Junior Software Engineer at Apple</h3>
+                            </div>
+                                <span class="exp__item-date">Jan 2016 - Dec 2017</span>
+                            </div>
+                            <p class="exp__item-desc">
+                                During my tenure at Apple, I held the role of Software Architect, where I played a key role in shaping the architecture of mission-critical software projects. Responsible for designing scalable and efficient systems, I provided technical leadership to a cross-functional team.
+                            </p>
+                        </li>
+                    </ul>
+                </div>
+            </div>
+        </section>
+        <!-- Experience End -->
     </main>
 
 </body>
