--- a/index.html
+++ b/index.html
@@ -270,7 +270,7 @@
         <!-- About Me -->
 
         <!-- Projects Start -->
-        <section class="project">
+        <section id="project" class="project">
         <div class="container">
             <h2 class="project__title">My <span class="project__span">Projects</span></h2>
             
@@ -310,10 +310,56 @@
                 </li>
             </ul>
         </div>
-    </section>
-    <!-- Projects End -->
+        </section>
+        <!-- Projects End -->
 
-    
+        <!-- Testimonial Start -->
+        <section class="test">
+            <div class="container">
+                <h2 class="test__title">My <span class="test__span">Testimonial</span></h2>
+
+                <ul class="test__list">
+                    <li class="test__item">
+                        <img class="test__img" width="96" height="96" src="/assets/icons/avatar.svg" alt="avatar img">
+                        <p class="test__desc">
+                            I recently had to jump on 10+ different calls across eight different countries to find the right owner.
+                        </p>
+                        <hr class="test__hr">
+                        <h3 class="test__item-title">Evren Shah</h3>
+                        <span class="test__item-role">Designer</span>
+                        <span class="test__q">
+                            <svg xmlns="http://www.w3.org/2000/svg" width="13" height="11" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" class="lucide lucide-quote"><path d="M16 3a2 2 0 0 0-2 2v6a2 2 0 0 0 2 2 1 1 0 0 1 1 1v1a2 2 0 0 1-2 2 1 1 0 0 0-1 1v2a1 1 0 0 0 1 1 6 6 0 0 0 6-6V5a2 2 0 0 0-2-2z"/><path d="M5 3a2 2 0 0 0-2 2v6a2 2 0 0 0 2 2 1 1 0 0 1 1 1v1a2 2 0 0 1-2 2 1 1 0 0 0-1 1v2a1 1 0 0 0 1 1 6 6 0 0 0 6-6V5a2 2 0 0 0-2-2z"/></svg>
+                        </span>
+                    </li>
+                    <li class="test__item">
+                        <img class="test__img" width="96" height="96" src="/assets/icons/avatar1.svg" alt="avatar img">
+                        <p class="test__desc">
+                            I recently had to jump on 10+ different calls across eight different countries to find the right owner.
+                        </p>
+                        <hr class="test__hr">
+                        <h3 class="test__item-title">Evren Shah</h3>
+                        <span class="test__item-role">Designer</span>
+                        <span class="test__q">
+                            <svg xmlns="http://www.w3.org/2000/svg" width="13" height="11" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" class="lucide lucide-quote"><path d="M16 3a2 2 0 0 0-2 2v6a2 2 0 0 0 2 2 1 1 0 0 1 1 1v1a2 2 0 0 1-2 2 1 1 0 0 0-1 1v2a1 1 0 0 0 1 1 6 6 0 0 0 6-6V5a2 2 0 0 0-2-2z"/><path d="M5 3a2 2 0 0 0-2 2v6a2 2 0 0 0 2 2 1 1 0 0 1 1 1v1a2 2 0 0 1-2 2 1 1 0 0 0-1 1v2a1 1 0 0 0 1 1 6 6 0 0 0 6-6V5a2 2 0 0 0-2-2z"/></svg>
+                        </span>
+                    </li>
+                    <li class="test__item">
+                        <img class="test__img" width="96" height="96" src="/assets/icons/avatar.svg" alt="avatar img">
+                        <p class="test__desc">
+                            I recently had to jump on 10+ different calls across eight different countries to find the right owner.
+                        </p>
+                        <hr class="test__hr">
+                        <h3 class="test__item-title">Evren Shah</h3>
+                        <span class="test__item-role">Designer</span>
+                        <span class="test__q">
+                            <svg xmlns="http://www.w3.org/2000/svg" width="13" height="11" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" class="lucide lucide-quote"><path d="M16 3a2 2 0 0 0-2 2v6a2 2 0 0 0 2 2 1 1 0 0 1 1 1v1a2 2 0 0 1-2 2 1 1 0 0 0-1 1v2a1 1 0 0 0 1 1 6 6 0 0 0 6-6V5a2 2 0 0 0-2-2z"/><path d="M5 3a2 2 0 0 0-2 2v6a2 2 0 0 0 2 2 1 1 0 0 1 1 1v1a2 2 0 0 1-2 2 1 1 0 0 0-1 1v2a1 1 0 0 0 1 1 6 6 0 0 0 6-6V5a2 2 0 0 0-2-2z"/></svg>
+                        </span>
+                    </li>
+                </ul>
+            </div>
+        </section>
+        <!-- Testimonial End -->
+
 
     </main>
     <!-- Main End -->
