add: site-footer

--- a/index.html
+++ b/index.html
@@ -48,7 +48,6 @@
 
     <!-- Main Start-->
     <main>
-
         <!-- Hero Start -->
         <section class="hero">
             <div class="container">
@@ -407,6 +406,22 @@
         <!-- Contact ME Satart -->
     </main>
     <!-- Main End -->
+
+    <!-- Site Footer Start -->
+    <footer class="site-footer">
+        <div class="container">
+            <div class="site-footer__row">
+                <a href="/">
+                    <img width="140" height="40" src="/assets/icons/logo-white.svg" alt="logo">
+                </a>
+
+                <p class="site-footer__desc">
+                    <span>@ 2019-2023 Personal</span> <br>  <span> Made in Figma</span>
+                </p>
+            </div>
+        </div>
+    </footer>
+    <!-- Site Footer End -->
 
 </body>
 </html>
