--- a/index.html
+++ b/index.html
@@ -367,7 +367,7 @@
         <!-- Testimonial End -->
 
         <!-- Contact ME Start -->
-        <section class="contact">
+        <section id="contact" class="contact">
             <div class="container">
                 <div class="contact__row">
                 <div class="contact__form">
